--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,10 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-material": "~0.10.0",
+    "zeroclipboard": "~2.2.0",
+    "ng-clip": "~0.2.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
